
2005-04-07  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* SkunkWeb/SkunkWeb/Server.py (SkunkWebServer.run): fix for
	seteuid and setgid.  There was previously a guard in place to undo
	any seteuid before calling setuid, but not before calling
	setgid. (Backport from skunk4.)

2005-04-13  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/util/precompile.py.in: now sets runOutOfCache to 0.
	Obviously, if you are precompiling, running out of the cache makes
	absolutely zero sense.

2005-03-08  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/DT/DTLexer.py: fix so that when encountering <<:, the
	lexer would still find the begin tag.
	
2005-01-31  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/AE/mime.types: adding mime type for XUL documents.

2005-01-11  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/jsutils.py (_dict_to_js): for some reason, was improperly
	marshalling dictionaries.

2004-10-01  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/PyDO/PyDO.py (PyDOBase.get): get() for some reason had
	crazy semantics; now is equivalent to obj.dict().get().

2004-09-10  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* SkunkWeb/configure, SkunkWeb/configure.in: added psycopgcache
	module to list of services.

	* pylibs/PsycopgCache.py: adding cache module.

	* SkunkWeb/Services/psycopgcache.py: adding cache service.

	* pylibs/PyDO/psycopgconn.py (PyDOPostgreSQL.__init__): fixed
	various fatal bugs.

2004-09-02  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/AE/Cache.py (_fixPath): this has gone through various
	incarnations, and the last one appears to be broken again. I think
	this works.

	* pylibs/DT/DT.py (DT.__call__): don't use locals() mutably for
	store/unstore, use a dict.

2004-07-28  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* pylibs/AE/Component.py (ComponentStackFrame.__del__):
	removing the __del__ method, as Python now can take care of circular
	references without help.
